--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,17 @@
           package="com.example.darkyskydemo">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
+            android:hardwareAccelerated="true"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <meta-data android:name="com.here.android.maps.appid" android:value="w6aAmiuUTi2Yvs83LkgI"/>
+        <meta-data android:name="com.here.android.maps.apptoken" android:value="ioCgl2J2OT52zCI7zyh7ZQ"/>
         <activity android:name=".secondscreen.DailyActivity">
         </activity>
         <activity android:name=".mainscreen.MainActivity">
