--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -12,8 +14,6 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <meta-data android:name="com.here.android.maps.appid" android:value="w6aAmiuUTi2Yvs83LkgI"/>
-        <meta-data android:name="com.here.android.maps.apptoken" android:value="ioCgl2J2OT52zCI7zyh7ZQ"/>
         <activity android:name=".secondscreen.DailyActivity">
         </activity>
         <activity android:name=".mainscreen.MainActivity">
